Special Line ENdings Save before Refresh

--- a/app/views/stocks/_form.html.erb
+++ b/app/views/stocks/_form.html.erb
@@ -20,9 +20,11 @@
     <%= form.number_field :user_id, value: current_user.id, type: :hidden%>
   </div>
 
+
+<!-- I'm going to remove the button, and involve input, so I have my control over the whole thing. It's ALL I can think of  -->
   
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Add Stock" %>
   </div>
 
 
